[gd_scene load_steps=2 format=3 uid="uid://d1qpbb8d43pxl"]

[ext_resource type="Script" path="res://scripts/caster.gd" id="1_fih6m"]

[node name="Caster" type="Node2D"]
script = ExtResource("1_fih6m")
speed = 150.0
life_span = 3.0
projectile_key = 2
cast_delay = 0.3

[node name="CastTimer" type="Timer" parent="."]
one_shot = true

[node name="CastSound" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="CastTimer" to="." method="_on_cast_timer_timeout"]
